Use Dload as a binary downloader

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,13 @@ composer.lock
 .DS_Store
 *.cache
 /runtime
+
+# Binaries
+/rr
+/rr.exe
+/protoc
+/protoc.exe
+/protoc-gen-php-grpc
+/protoc-gen-php-grpc.exe
+/temporal
+/temporal.exe
