--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "spiral/roadrunner-http": "^3.0",
         "spiral/roadrunner-worker": "^3.0",
         "temporal/sdk": "^2.0",
-        "internal/dload": "^1.1"
+        "internal/dload": "^1.1",
+        "spiral/grpc-client": "^1.0.0-rc1"
     },
     "require-dev": {
         "laravel/framework": "^12.0",
